# redis-interval-module

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.adoc  ROADMAP.adoc  bugs.adoc
src/: hashmap.c  hashmap.h  interval-red-black-tree.c  interval-red-black-tree.h  interval-set.c  interval-set.h  interval.c  interval.h  intervalavltree.c  intervalavltree.h  intervalredblacktree.c  intervalredblacktree.h  io.c  io.h  item.c  item.h  linked-list.c  linked-list.h  output.c  output.h  redis-commands.c  redis-commands.h  redis-interval-module.c  redismodule.h  struct.c  struct.h  treap-tree.c  treap-tree.h  util.c  util.h
tests/: iadd_interval_test.py  iadd_test.py  icard_test.py  setup.py  test.sh  test_iadd.py  test_iadd_interval.py  test_icard.py  test_icontains.py  test_iget.py  test_ioverlaps.py  test_irem.py  test_iscan.py
